移除极少用到的类。